--- a/plugins/go-build/share/go-build/1.8.5
+++ b/plugins/go-build/share/go-build/1.8.5
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.8.5" "https://storage.googleapis.com/golan
 install_linux_64bit "Go Linux 64bit 1.8.5" "https://storage.googleapis.com/golang/go1.8.5.linux-amd64.tar.gz#4f8aeea2033a2d731f2f75c4d0a4995b357b22af56ed69b3015f4291fca4d42d"
 
 install_linux_arm "Go Linux arm 1.8.5" "https://dl.google.com/go/go1.8.5.linux-armv6l.tar.gz#f5c58e7fd6cdfcc40b94c6655cf159b25836dffe13431f683b51705b8a67d608"
+
+install_linux_aarch64 "Go Linux ARM64 1.8.5" "https://dl.google.com/go/go1.8.5.linux-arm64.tar.gz#6c552ae1e77c52944e0f9b9034761bd3dcc3fef57dad6d751a53638783b07d2c"
