--- a/plugins/go-build/share/go-build/1.8.7
+++ b/plugins/go-build/share/go-build/1.8.7
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.8.7" "https://dl.google.com/go/go1.8.7.lin
 install_linux_64bit "Go Linux 64bit 1.8.7" "https://dl.google.com/go/go1.8.7.linux-amd64.tar.gz#de32e8db3dc030e1448a6ca52d87a1e04ad31c6b212007616cfcc87beb0e4d60"
 
 install_linux_arm "Go Linux arm 1.8.7" "https://dl.google.com/go/go1.8.7.linux-armv6l.tar.gz#7aa455a8ddec569e778b23166102bb26f1bdb3ad5feec15b688654a10a9d3d2a"
+
+install_linux_aarch64 "Go Linux ARM64 1.8.7" "https://dl.google.com/go/go1.8.7.linux-arm64.tar.gz#804c2e73eca5ce309f2947aaf437fce9f67463b4fb9484f47c95b632d4eeabf6"
