--- a/plugins/go-build/share/go-build/1.9.2
+++ b/plugins/go-build/share/go-build/1.9.2
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.9.2" "https://storage.googleapis.com/golan
 install_linux_64bit "Go Linux 64bit 1.9.2" "https://storage.googleapis.com/golang/go1.9.2.linux-amd64.tar.gz#de874549d9a8d8d8062be05808509c09a88a248e77ec14eb77453530829ac02b"
 
 install_linux_arm "Go Linux arm 1.9.2" "https://dl.google.com/go/go1.9.2.linux-armv6l.tar.gz#8a6758c8d390e28ef2bcea511f62dcb43056f38c1addc06a8bc996741987e7bb"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.9.2" "https://dl.google.com/go/go1.9.2.linux-arm64.tar.gz#0016ac65ad8340c84f51bc11dbb24ee8265b0a4597dbfdf8d91776fc187456fa"
