--- a/plugins/go-build/share/go-build/1.9.4
+++ b/plugins/go-build/share/go-build/1.9.4
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.9.4" "https://dl.google.com/go/go1.9.4.lin
 install_linux_64bit "Go Linux 64bit 1.9.4" "https://dl.google.com/go/go1.9.4.linux-amd64.tar.gz#15b0937615809f87321a457bb1265f946f9f6e736c563d6c5e0bd2c22e44f779"
 
 install_linux_arm "Go Linux arm 1.9.4" "https://dl.google.com/go/go1.9.4.linux-armv6l.tar.gz#3c8cf3f79754a9fd6b33e2d8f930ee37d488328d460065992c72bc41c7b41a49"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.9.4" "https://dl.google.com/go/go1.9.4.linux-arm64.tar.gz#41a71231e99ccc9989867dce2fcb697921a68ede0bd06fc288ab6c2f56be8864"
