--- a/plugins/go-build/share/go-build/1.9.5
+++ b/plugins/go-build/share/go-build/1.9.5
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.9.5" "https://dl.google.com/go/go1.9.5.lin
 install_linux_64bit "Go Linux 64bit 1.9.5" "https://dl.google.com/go/go1.9.5.linux-amd64.tar.gz#d21bdabf4272c2248c41b45cec606844bdc5c7c04240899bde36c01a28c51ee7"
 
 install_linux_arm "Go Linux arm 1.9.5" "https://dl.google.com/go/go1.9.5.linux-armv6l.tar.gz#e9b6f0cbd95ff3077ddeaec1958be77d9675f0cf5652a67152d28d84707a4e9e"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.9.5" "https://dl.google.com/go/go1.9.5.linux-arm64.tar.gz#d0bb265559cd8613882e6bbd197a80ed7090684117c6fc6900aa58dea2463715"
