--- a/plugins/go-build/share/go-build/1.9.6
+++ b/plugins/go-build/share/go-build/1.9.6
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.9.6" "https://dl.google.com/go/go1.9.6.lin
 install_linux_64bit "Go Linux 64bit 1.9.6" "https://dl.google.com/go/go1.9.6.linux-amd64.tar.gz#d1eb07f99ac06906225ac2b296503f06cc257b472e7d7817b8f822fe3766ebfe"
 
 install_linux_arm "Go Linux arm 1.9.6" "https://dl.google.com/go/go1.9.6.linux-armv6l.tar.gz#73e56ec4408650d9fda0be8282a9ad49c51ad17929b4d20c04cea07249726bd8"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.9.6" "https://dl.google.com/go/go1.9.6.linux-arm64.tar.gz#8596d64b9f582d6209c04513824e428d1c356276180d2089d4dfcf4c7cf8a6cc"
