--- a/plugins/go-build/share/go-build/1.9.1
+++ b/plugins/go-build/share/go-build/1.9.1
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.9.1" "https://storage.googleapis.com/golan
 install_linux_64bit "Go Linux 64bit 1.9.1" "https://storage.googleapis.com/golang/go1.9.1.linux-amd64.tar.gz#07d81c6b6b4c2dcf1b5ef7c27aaebd3691cdb40548500941f92b221147c5d9c7"
 
 install_linux_arm "Go Linux arm 1.9.1" "https://dl.google.com/go/go1.9.1.linux-armv6l.tar.gz#65a0495a50c7c240a6487b1170939586332f6c8f3526abdbb9140935b3cff14c"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.9.1" "https://dl.google.com/go/go1.9.1.linux-arm64.tar.gz#d31ecae36efea5197af271ccce86ccc2baf10d2e04f20d0fb75556ecf0614dad"
