--- a/plugins/go-build/share/go-build/1.9.3
+++ b/plugins/go-build/share/go-build/1.9.3
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.9.3" "https://dl.google.com/go/go1.9.3.lin
 install_linux_64bit "Go Linux 64bit 1.9.3" "https://dl.google.com/go/go1.9.3.linux-amd64.tar.gz#a4da5f4c07dfda8194c4621611aeb7ceaab98af0b38bfb29e1be2ebb04c3556c"
 
 install_linux_arm "Go Linux arm 1.9.3" "https://dl.google.com/go/go1.9.3.linux-armv6l.tar.gz#926d6cd6c21ef3419dca2e5da8d4b74b99592ab1feb5a62a4da244e6333189d2"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.9.3" "https://dl.google.com/go/go1.9.3.linux-arm64.tar.gz#065d79964023ccb996e9dbfbf94fc6969d2483fbdeeae6d813f514c5afcd98d9"
