--- a/plugins/go-build/share/go-build/1.9.7
+++ b/plugins/go-build/share/go-build/1.9.7
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.9.7" "https://dl.google.com/go/go1.9.7.lin
 install_linux_64bit "Go Linux 64bit 1.9.7" "https://dl.google.com/go/go1.9.7.linux-amd64.tar.gz#88573008f4f6233b81f81d8ccf92234b4f67238df0f0ab173d75a302a1f3d6ee"
 
 install_linux_arm "Go Linux arm 1.9.7" "https://dl.google.com/go/go1.9.7.linux-armv6l.tar.gz#83b165d617807d636d2cfe07f34920ab6e5374a07ab02d60edcaec008de608ee"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.9.7" "https://dl.google.com/go/go1.9.7.linux-arm64.tar.gz#68f48c29f93e4c69bbbdb335f473d666b9f8791643f4003ef45283a968b41f86"
