--- a/plugins/go-build/share/go-build/1.10.2
+++ b/plugins/go-build/share/go-build/1.10.2
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.10.2" "https://dl.google.com/go/go1.10.2.l
 install_linux_64bit "Go Linux 64bit 1.10.2" "https://dl.google.com/go/go1.10.2.linux-amd64.tar.gz#4b677d698c65370afa33757b6954ade60347aaca310ea92a63ed717d7cb0c2ff"
 
 install_linux_arm "Go Linux arm 1.10.2" "https://dl.google.com/go/go1.10.2.linux-armv6l.tar.gz#529a16b531d4561572db6ba9d357215b58a1953437a63e76dc0c597be9e25dd2"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.10.2" "https://dl.google.com/go/go1.10.2.linux-arm64.tar.gz#d6af66c71b12d63c754d5bf49c3007dc1c9821eb1a945118bfd5a539a327c4c8"
