--- a/plugins/go-build/share/go-build/1.10.5
+++ b/plugins/go-build/share/go-build/1.10.5
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.10.5" "https://dl.google.com/go/go1.10.5.l
 install_linux_64bit "Go Linux 64bit 1.10.5" "https://dl.google.com/go/go1.10.5.linux-amd64.tar.gz#a035d9beda8341b645d3f45a1b620cf2d8fb0c5eb409be36b389c0fd384ecc3a"
 
 install_linux_arm "Go Linux arm 1.10.5" "https://dl.google.com/go/go1.10.5.linux-armv6l.tar.gz#1d864a6d0ec599de9112c8354dcaaa886b4df928757966939402598e9bd9c238"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.10.5" "https://dl.google.com/go/go1.10.5.linux-arm64.tar.gz#b4c16fcee18bc79de2fa4776c8d0f9bc164ddfc32101e96fe1da83ebe881e3df"
