--- a/plugins/go-build/share/go-build/1.10.7
+++ b/plugins/go-build/share/go-build/1.10.7
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.10.7" "https://dl.google.com/go/go1.10.7.l
 install_linux_64bit "Go Linux 64bit 1.10.7" "https://dl.google.com/go/go1.10.7.linux-amd64.tar.gz#1aabe10919048822f3bb1865f7a22f8b78387a12c03cd573101594bc8fb33579"
 
 install_linux_arm "Go Linux arm 1.10.7" "https://dl.google.com/go/go1.10.7.linux-armv6l.tar.gz#1f81c995f829c8fc7def4d0cc1bde63cac1834386e6f650f2cd7be56ab5e8b98"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.10.7" "https://dl.google.com/go/go1.10.7.linux-arm64.tar.gz#cb5a274f7c8f6186957e4503e724dda8aeffe84b76a146748c55ea5bb22d9ae4"
