--- a/plugins/go-build/share/go-build/1.10.1
+++ b/plugins/go-build/share/go-build/1.10.1
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.10.1" "https://dl.google.com/go/go1.10.1.l
 install_linux_64bit "Go Linux 64bit 1.10.1" "https://dl.google.com/go/go1.10.1.linux-amd64.tar.gz#72d820dec546752e5a8303b33b009079c15c2390ce76d67cf514991646c6127b"
 
 install_linux_arm "Go Linux arm 1.10.1" "https://dl.google.com/go/go1.10.1.linux-armv6l.tar.gz#feca4e920d5ca25001dc0823390df79bc7ea5b5b8c03483e5a2c54f164654936"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.10.1" "https://dl.google.com/go/go1.10.1.linux-arm64.tar.gz#1e07a159414b5090d31166d1a06ee501762076ef21140dcd54cdcbe4e68a9c9b"
