--- a/plugins/go-build/share/go-build/1.10.3
+++ b/plugins/go-build/share/go-build/1.10.3
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.10.3" "https://dl.google.com/go/go1.10.3.l
 install_linux_64bit "Go Linux 64bit 1.10.3" "https://dl.google.com/go/go1.10.3.linux-amd64.tar.gz#fa1b0e45d3b647c252f51f5e1204aba049cde4af177ef9f2181f43004f901035"
 
 install_linux_arm "Go Linux arm 1.10.3" "https://dl.google.com/go/go1.10.3.linux-armv6l.tar.gz#d3df3fa3d153e81041af24f31a82f86a21cb7b92c1b5552fb621bad0320f06b6"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.10.3" "https://dl.google.com/go/go1.10.3.linux-arm64.tar.gz#355128a05b456c9e68792143801ad18e0431510a53857f640f7b30ba92624ed2"
