--- a/plugins/go-build/share/go-build/1.10.4
+++ b/plugins/go-build/share/go-build/1.10.4
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.10.4" "https://dl.google.com/go/go1.10.4.l
 install_linux_64bit "Go Linux 64bit 1.10.4" "https://dl.google.com/go/go1.10.4.linux-amd64.tar.gz#fa04efdb17a275a0c6e137f969a1c4eb878939e91e1da16060ce42f02c2ec5ec"
 
 install_linux_arm "Go Linux arm 1.10.4" "https://dl.google.com/go/go1.10.4.linux-armv6l.tar.gz#4e1e80bd98f3598c0c48ba0c189c836d01b602bfc769b827a4bfed01d2c14b21"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.10.4" "https://dl.google.com/go/go1.10.4.linux-arm64.tar.gz#2e0f9e99aeefaabba280b2bf85db0336da122accde73603159b3d72d0b2bd512"
