--- a/plugins/go-build/share/go-build/1.10.6
+++ b/plugins/go-build/share/go-build/1.10.6
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.10.6" "https://dl.google.com/go/go1.10.6.l
 install_linux_64bit "Go Linux 64bit 1.10.6" "https://dl.google.com/go/go1.10.6.linux-amd64.tar.gz#acbdedf28b55b38d2db6f06209a25a869a36d31bdcf09fd2ec3d40e1279e0592"
 
 install_linux_arm "Go Linux arm 1.10.6" "https://dl.google.com/go/go1.10.6.linux-armv6l.tar.gz#4da252fc7e834b7ce35d349fb581aa84a08adece926a0b9a8e4216451ffcb11e"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.10.6" "https://dl.google.com/go/go1.10.6.linux-arm64.tar.gz#0fcbfbcbf6373c0b6876786900a4a100c1ed9af86bd3258f23ab498cca4c02a1"
