--- a/plugins/go-build/share/go-build/1.11.1
+++ b/plugins/go-build/share/go-build/1.11.1
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.11.1" "https://dl.google.com/go/go1.11.1.l
 install_linux_64bit "Go Linux 64bit 1.11.1" "https://dl.google.com/go/go1.11.1.linux-amd64.tar.gz#2871270d8ff0c8c69f161aaae42f9f28739855ff5c5204752a8d92a1c9f63993"
 
 install_linux_arm "Go Linux arm 1.11.1" "https://dl.google.com/go/go1.11.1.linux-armv6l.tar.gz#bc601e428f458da6028671d66581b026092742baf6d3124748bb044c82497d42"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.11.1" "https://dl.google.com/go/go1.11.1.linux-arm64.tar.gz#25e1a281b937022c70571ac5a538c9402dd74bceb71c2526377a7e5747df5522"
