--- a/plugins/go-build/share/go-build/1.11.2
+++ b/plugins/go-build/share/go-build/1.11.2
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.11.2" "https://dl.google.com/go/go1.11.2.l
 install_linux_64bit "Go Linux 64bit 1.11.2" "https://dl.google.com/go/go1.11.2.linux-amd64.tar.gz#1dfe664fa3d8ad714bbd15a36627992effd150ddabd7523931f077b3926d736d"
 
 install_linux_arm "Go Linux arm 1.11.2" "https://dl.google.com/go/go1.11.2.linux-armv6l.tar.gz#b9d16a8eb1f7b8fdadd27232f6300aa8b4427e5e4cb148c4be4089db8fb56429"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.11.2" "https://dl.google.com/go/go1.11.2.linux-arm64.tar.gz#98a42b9b8d3bacbcc6351a1e39af52eff582d0bc3ac804cd5a97ce497dd84026"
