--- a/plugins/go-build/share/go-build/1.11.3
+++ b/plugins/go-build/share/go-build/1.11.3
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.11.3" "https://dl.google.com/go/go1.11.3.l
 install_linux_64bit "Go Linux 64bit 1.11.3" "https://dl.google.com/go/go1.11.3.linux-amd64.tar.gz#d20a4869ffb13cee0f7ee777bf18c7b9b67ef0375f93fac1298519e0c227a07f"
 
 install_linux_arm "Go Linux arm 1.11.3" "https://dl.google.com/go/go1.11.3.linux-armv6l.tar.gz#384933e6e97b74c5125011c8f0539362bbed5a015978a34e441d7333d8e519b9"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.11.3" "https://dl.google.com/go/go1.11.3.linux-arm64.tar.gz#723c54cb081dd629a44d620197e4a789dccdfe6dee7f8b4ad7a6659f76952056"
