--- a/plugins/go-build/share/go-build/1.11.4
+++ b/plugins/go-build/share/go-build/1.11.4
@@ -9,3 +9,5 @@ install_linux_32bit "Go Linux 32bit 1.11.4" "https://dl.google.com/go/go1.11.4.l
 install_linux_64bit "Go Linux 64bit 1.11.4" "https://dl.google.com/go/go1.11.4.linux-amd64.tar.gz#fb26c30e6a04ad937bbc657a1b5bba92f80096af1e8ee6da6430c045a8db3a5b"
 
 install_linux_arm "Go Linux arm 1.11.4" "https://dl.google.com/go/go1.11.4.linux-armv6l.tar.gz#9f7a71d27fef69f654a93e265560c8d9db1a2ca3f1dcdbe5288c46facfde5821"
+
+install_linux_aarch64 "Go Linux ARM 64-bit 1.11.4" "https://dl.google.com/go/go1.11.4.linux-arm64.tar.gz#b76df430ba8caff197b8558921deef782cdb20b62fa36fa93f81a8c08ab7c8e7"
